Move to Java 21 and Spigot API version 1.20.1